# autothief_decomp

./: .gitignore  README.md  pm_viewer.py
blender/io_import_autothief/: __init__.py  export_city.py  import_alf.py  import_city.py  import_pm.py
decomp/ghidra/: split_autothief.pl
decomp/ghidra/autothief_split/: atl_com.c  audio.c  avi_video.c  camera.c  compression.c  config.c  crt_runtime.c  d3d_api.c  entry_point.c  exception_catch.c  exception_unwind.c  font.c  globals_00.c  globals_01.c  globals_02.c  globals_03.c  globals_04.c  globals_05.c  globals_06.c  globals_07.c  globals_08.c  gui.c  input.c  models.c  ogg_vorbis.c  pbe_scene.c  pbe_texture.c  rendering.c  scripting.c  terrain.c  thunks.c  vehicle.c  video_playback.c  world.c
docs/: ALF_FORMAT.md  CITY_FORMAT.md  PAK_FORMAT.md  PM_FORMAT.md  PSF_FORMAT.md  STR_DLG_FORMAT.md  SYMBOLS.md  TODO.md
src/: CMakeLists.txt
src/autothief/: logger.c  logger.h  pak_io.c  pak_io.h  pak_test.c
tools/: city_format.py  generate_stubs.py  harvest_symbols.py  lua_match.py  pak_tool.py  pm_viewer.py  run-city.txt  run_dialog.txt  str_dlg_viewer.py
tools/city_editor/: city_loader.py  gl_renderer.py  main.py  pm_loader.py
tools/lua4-decompile/: decompile_all.sh  lua4dec.py
